--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="item item--sale">
+    <div class="item">
       <h1 class="item__title">Дон Жульен</h1>
       <p class="item__content">сыр, курица, грибы, королевский соус</p>
       <div class="item__price">55 <span class="item__rub">&#8381;</span></div>
